# pi-enders-game-edition

./: .gitignore  README.md
.ai/: agent-skills-overrides.md
agents/: backend-engineer.md  build-release-manager.md  data-engineer.md  designer.md  engineering-manager.md  frontend-engineer.md  ml-inference-engineer.md  observability-engineer.md  platform-engineer.md  principal-engineer.md  product-manager.md  quality-assurance.md  sre.md  technical-writer.md
cliproxy/: cliproxy.example.yaml  pyproject.toml
cliproxy/cliproxy/: __init__.py  api.py  base.py  cli.py  registry.py
cliproxy/cliproxy/modules/: __init__.py  grok.py  passthrough.py
cliproxy/tests/: test_cliproxy.py
context/: .env.example  pyproject.toml
context/context/: __init__.py  api.py  cli.py  embed.py  judge.py  models.py  partition.py  service.py  store.py
context/tests/: test_judge.py  test_partition.py  test_store.py
deploy/: README.md  bootstrap.sh  dnc-context.service  dnc-embeddings.service  dnc-fleetd.service  dnc-litellm.service  fleet-nodes.example.yaml  install-embeddings.sh
deploy/bc250/: Dockerfile  README.md  dnc-bc250-q36.container  entrypoint.sh  fetch-patched-driver.sh  provision-node-ubuntu.sh  provision-node.sh  qwen36-tools.jinja
deploy/pi-subagents/: config.example.json
deploy/s1/: README.md  stepfun-tools.jinja
docs/: model-selection-2026.md  qwen36-gguf-conversion.md  team-fanout-prompt.md
docs/ideas/: README.md  accessibility-compliance.example.md  bug-fix.example.md  iterate-mature.example.md  performance-scale.example.md  port-language.example.md  tech-debt.example.md  zero-to-one.example.md
fleetd/: hosts.example.yaml  pyproject.toml
fleetd/fleetd/: __init__.py  api.py  cli.py  db.py  discover.py  litellm_sync.py  models.py  plays.py  power.py
fleetd/tests/: test_discover.py  test_litellm_sync.py  test_plays.py  test_power.py
harness/: package-lock.json  package.json
harness/src/: cli.ts  dod.ts  fanout.ts  ralph.ts
harness/tests/: fanout.test.ts  mock-pi.sh
pi-ext/: package-lock.json  package.json
pi-ext/src/: config.ts  context-distill.ts  context-inject.ts  deploy-command.ts  fleet-command.ts  fleet-power-command.ts  fleet-routing.ts  index.ts  last-tier.ts  provider.ts  tasks-command.ts  (+1 more)
router/: litellm-config.example.yaml  pyproject.toml
router/dnc_router/: __init__.py  serve.py  strategy.py
router/tests/: test_strategy.py
tools/: affinity_ab.py  bench_embed.py  bench_nodes.py  bench_prompts.json  faninout_ab.py  fleetpower.py  gguf_dump.py  gguf_set_uint.py  m1_benchmark.py  make_bench_prompts.py  model_bench.py  model_sync.py  wol.py
(+4 files in other folders)
