[project]
name = "dnc-cliproxy"
version = "0.1.0"
description = "Pluggable OpenAI-compatible auth-bridge: presents /v1 outward, adapts CLI/provider auth inward"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dnc-cliproxy = "cliproxy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cliproxy"]
