[project]
name = "dnc-context"
version = "0.1.0"
description = "Divide-and-conquer long-term context: repo-partitioned pgvector store + embedding client"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context"]
