[project]
name = "fleetd"
version = "0.1.0"
description = "Divide-and-conquer fleet daemon: inventory, IaC plays, health polling, task ledger"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "asyncssh>=2.16",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
fleetd = "fleetd.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fleetd"]
