[project]
name = "dnc-router"
version = "0.1.0"
description = "LiteLLM custom routing: complexity tiers + prefix-hash KV-cache affinity"
requires-python = ">=3.11"
dependencies = [
    "litellm[proxy]>=1.60",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dnc_router"]
